Trying to fix navbar dropdown menu (not showing)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4535,9 +4535,6 @@ textarea.form-control-lg {
 	padding-right: 0;
 	padding-bottom: 0;
 	padding-left: 0;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	white-space: nowrap;
 }
 
 .navbar>.container,.navbar>.container-fluid,.navbar>.container-lg,.navbar>.container-md,.navbar>.container-sm,.navbar>.container-xl,.navbar>.container-xxl {
